# playground

./: README.md
architeture/realtime-voting-system/: readme.md
git/fix-email-commit/: fix_git_email.sh  scan_git_wrong_emails.sh  wrong_email_commits.csv
java/concurrency/: README.md  pom.xml
java/dungeon-game/: .dockerignore  Dockerfile  README.md  docker-compose.gatling.yml  docker-compose.yml  pom.xml  prometheus.yml
java/functional-interfaces/: README.md  pom.xml
java/properties-api/: README.md  pom.xml
java/reflection-api/: .gitignore  README.md  pom.xml
java/streams-1/: README.md  pom.xml
java/streams-2/: README.md  pom.xml
javascript/: tech-resources.md
javascript/axios-vs-fetch/: readme.md
javascript/module-federation/: README.md
javascript/poc-encrypted-postgres/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
javascript/poc-fastify/: package-lock.json  package.json  tsconfig.json
javascript/poc-fusionauth-node/: docker-compose.yml  readme.md
javascript/poc-keycloak-node/: readme.md
javascript/segment-tree/: .gitignore  README.md  index.html  package.json  segment-tree.js
javascript/tambo-poc/: package-lock.json  package.json
javascript/worker/: main.js
pure/: fibo.pure
python/: README.md
python/svm/: .gitignore  README.md  pyproject.toml
python/svm/src/svm_app/: __init__.py  iris_demo.py  main.py  rbf_demo.py
rust/testcontainer-poc/: Cargo.toml  Dockerfile  docker-compose.yml
rust/testcontainer-poc/src/: lib.rs  main.rs
rust/testcontainer-poc/src/tests/: with_testcontainers.rs  without_testcontainers.rs
rust/testcontainer-poc/tests/: external_compose_flaky.rs  with_testcontainers.rs
sql/: Dockerfile
(+358 files in other folders)
