[project]
name = "svm-example"
version = "0.1.0"
description = "Simple SVM example application using uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
]

[project.scripts]
svm-app = "svm_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svm_app"]
